fix for overlapping text

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -90,11 +90,6 @@
     }
   }
 
-  @media (max-width: 768px) {
-    .project-hero {
-      height: 50vh;
-    }
-  }
 
   /* Project Content */
   .project-content {
